# RF-Sentinel

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: streamlit_research_demo.py
configs/: cnn1d_baseline.yaml  cnn1d_quick_test.yaml  inference_default.yaml  resnet1d_baseline.yaml  resnet1d_quick_test.yaml  tcn1d_baseline.yaml  tcn1d_quick_test.yaml  xgboost_features.yaml
data/: README.md
docs/: configuration.md  dataset.md  experiment_tracking.md  model_card.md  troubleshooting.md
notebooks/: 01_dataset_exploration.ipynb  README.md
reports/: training_config.yaml
src/rf_sentinel/: __init__.py  cli.py
src/rf_sentinel/config/: __init__.py  loader.py
src/rf_sentinel/data/: __init__.py  dataset.py  inspection.py  preprocessing.py  radioml_loader.py  splits.py
src/rf_sentinel/evaluation/: __init__.py  error_analysis.py  metrics.py  plots.py  robustness.py
src/rf_sentinel/inference/: __init__.py  predictor.py
src/rf_sentinel/models/: __init__.py  cnn1d.py  factory.py  resnet1d.py  tcn1d.py  xgboost_baseline.py
src/rf_sentinel/signal/: __init__.py  iq_features.py
src/rf_sentinel/training/: __init__.py  losses.py  mlflow_utils.py  trainer.py
src/rf_sentinel/utils/: __init__.py  device.py  logging.py  paths.py  reproducibility.py
tests/: test_confidence_prediction.py  test_config.py  test_metrics.py  test_model_forward.py  test_preprocessing.py  test_synthetic_smoke.py
